fix: hides dark mode option from menu

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -32,3 +32,7 @@ body,
 .tldraw {
   height: 100%;
 }
+
+[role="menuitemcheckbox"][title="Dark mode"] {
+  display: none;
+}
